# mbb-asud-paper-archive

./: .gitignore  README.md  conda-env-export-from-history.txt  defaults_html.yaml  defaults_latex.yaml  defaults_typst.yaml  dodo.py  metadata.yaml  pyproject.toml
data/Data and Task Setup/: CHANGELOG
docs/: index.html  mbb-asud-presentation.html  search.json
newsscrape/newsscrape/spiders/: tagesspider.py
src/: clean-archivo-narrow.scss  mbb-asud-paper-polars.ipynb  mbb-asud-paper.bib  mbb-asud-paper.ipynb  mbb-asud-paper.qmd  mbb-asud-presentation.qmd  template.typst
src/md/: mbb-asud-paper.md
src/pres/: _quarto.yml  clean-archivo-narrow.scss  mbb-asud-presentation.html  mbb-asud-presentation.qmd
src/pres/assets/: Untitled Diagram.drawio  entities.graphml  pipeline.drawio  pipeline.excalidraw  typen_von_graphen.kra
wdscrape/wdscrape/: pipelines.py
wdscrape/wdscrape/spiders/: wdspider.py
